--- a/john-common-root/john-components-parent/john-component-core/pom.xml
+++ b/john-common-root/john-components-parent/john-component-core/pom.xml
@@ -12,5 +12,12 @@
     <artifactId>john-component-core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+    </dependencies>
 
 </project>
