--- a/john-common-root/john-components-parent/pom.xml
+++ b/john-common-root/john-components-parent/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
+        <groupId>john.common.root</groupId>
+        <artifactId>john-common-root</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>john.components.parent</groupId>
@@ -20,7 +20,6 @@
         <module>john-component-core</module>
         <module>john-component-pagehelper</module>
     </modules>
-
 
 
 </project>
