应用雪花算法ID

--- a/john-microservice-root/john-admin-parent/john-admin-starter/src/main/resources/application.yml
+++ b/john-microservice-root/john-admin-parent/john-admin-starter/src/main/resources/application.yml
@@ -28,3 +28,6 @@ admin:
     enabled: false
 mybatis:
   mapper-locations: com/john/service/**/*.xml
+logging:
+  level:
+    com.john.service.user.dao: debug
