使用dependencyManagement统一管理jar版本

--- a/john-common-root/john-components-parent/john-component-pagehelper/pom.xml
+++ b/john-common-root/john-components-parent/john-component-pagehelper/pom.xml
@@ -14,17 +14,20 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>john.component.core</groupId>
+            <artifactId>john-component-core</artifactId>
+        </dependency>
+
         <!--pagehelper version:5.1.2 -> 1.2.3  -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>5.1.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-autoconfigure</artifactId>
-            <version>1.2.3</version>
         </dependency>
 
     </dependencies>
