--- a/john-common-root/pom.xml
+++ b/john-common-root/pom.xml
@@ -19,7 +19,6 @@
         <module>john-common-parent</module>
     </modules>
 
-    <!--
 
     <properties>
         <java.version>1.8</java.version>
@@ -28,10 +27,29 @@
         <pagehelper.version>5.1.2</pagehelper.version>
         <pagehelper.autoconfigure.version>1.2.3</pagehelper.autoconfigure.version>
         <commons.lang3.version>3.10</commons.lang3.version>
+        <mybatis-spring.version>2.0.4</mybatis-spring.version>
+        <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>john.components.parent</groupId>
+                <artifactId>john-components-parent</artifactId>
+                <version>${component.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>john.common.parent</groupId>
+                <artifactId>john-common-parent</artifactId>
+                <version>${common.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
@@ -62,9 +80,17 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons.lang3.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis-spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
--->
 
 </project>
