--- a/john-microservice-root/pom.xml
+++ b/john-microservice-root/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
+        <groupId>john.common.root</groupId>
+        <artifactId>john-common-root</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>john.microservice.root</groupId>
@@ -20,5 +20,6 @@
         <module>john-admin-parent</module>
         <module>john-biz-parent</module>
     </modules>
+
 
 </project>
